--- a/components/Profile/general.module.css
+++ b/components/Profile/general.module.css
@@ -914,6 +914,9 @@
     0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
     0 100px 80px rgba(0, 0, 0, 0.07);
   position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .profile-card:after {
@@ -922,7 +925,7 @@
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  background-color:#78eea6;
+  background-color: #78eea6;
   top: 25px;
   right: 96px;
   border: 2px solid white;
@@ -1157,8 +1160,8 @@
   font-size: 15px;
   text-transform: capitalize;
 }
-.order-title *{
-  margin:10px;
+.order-title * {
+  margin: 10px;
 }
 .rank-circle-container {
   display: flex;
