--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   max-width: 100%;
   overflow-x: hidden;
   font-family: "PT Sans";
+  scroll-behavior: smooth;
 }
 @font-face {
   font-family: "castellar";
@@ -16,6 +17,11 @@ a {
 #scales {
   display: none;
 }
+.brandpush-vertical-center {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  transform: translate(13%, -50%) !important;
+}
 
 * {
   box-sizing: border-box;
@@ -23,3 +29,6 @@ a {
   padding: 0;
   font-family: "PT Sans";
 }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
