--- a/components/Home/Home.module.css
+++ b/components/Home/Home.module.css
@@ -336,42 +336,53 @@
 }
 .whoAreWe-container {
   border: 5px solid turquoise;
-  width: 70vw;
+  width: 50%;
   height: auto;
   border-radius: 100px;
   margin: auto;
-  margin-bottom: 10vh;
-  margin-top: 10vh;
+  margin-bottom: 5vh;
+  margin-top: 5vh;
   opacity: 1;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
 }
+
 .whoAreWe-title {
-  font-size: 63.96px;
+  font-size: 33.96px;
   border-bottom: 5px solid turquoise;
   border-radius: 7px;
   color: black;
   opacity: 1;
   text-align: center;
-  padding: 2rem;
+  padding: 10px;
+}
+.whoAreWe-wrap{
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 #WWA-desc {
-  font-size: 1.5rem;
+  font-size: 15px;
   color: black;
-
-  padding: 45px;
-  line-height: 37px;
+  width: 80%;
   text-align: center;
+  
 }
 
 @media screen and (max-width: 700px) {
   .whoAreWe-container {
     width: 90vw;
+    border-radius: 40px;
   }
+  
   #WWA-desc {
-    font-size: 18px;
+    margin: 10px;
+    width: 90%;
+    font-size: 14px;
   }
 }
 .WhatIsBoosting-title {
